2005-07-11  Sven Neumann  <sven@gimp.org>

	* app/base/segmentator.c: for now, implement smooth_mask() by
	means of gaussian_blur_region().

2005-07-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimppropwidgets.c: minor fixes to the API docs.

2005-07-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimppickable.[ch]: added GimpPickable::get_opacity_at()

	* app/core/gimpchannel.[ch]: removed gimp_channel_value() and
	implement ::get_opacity_at() instead.

	* app/core/gimplayer.[ch]: removed gimp_layer_pick_correlate()
	and implement ::get_opacity_at() instead.

	* app/core/gimpselection.c: GimpChannel::value() doesn't exist
	any more.

	* app/core/gimpprojection.c: implement ::get_opacity_at(), always
	returns OPAQUE.

	* app/core/gimpimage.c
	* app/tools/gimpbucketfilltool.c
	* app/tools/gimpclonetool.c
	* app/tools/gimpfliptool.c
	* app/tools/gimpiscissorstool.c
	* app/tools/gimpnewrectselecttool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimpselectiontool.c
	* app/tools/gimptransformtool.c
	* tools/pdbgen/pdb/selection.pdb: changed accordingly.

	* app/pdb/selection_cmds.c: regenerated.

2005-07-11  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpclonetool.c (gimp_clone_tool_cursor_update):
	simplify check for "inside selected region".

2005-07-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer.c: added read-only properties "opacity",
	"mode" and "lock-alpha".

2005-07-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: plugged memory leaks (bug #309967).
	Invalidate the preview when the algorithm is changed; default to
	RLE since it appears to be faster for the cases I tried.

2005-07-10  Carol Spears  <carol@gimp.org>

	* docs/Wilber_Construction_Kit.xcf.gz

2005-07-10  Manish Singh  <yosh@gimp.org>

	* libgimp/gimplayer.c (gimp_layer_set_preserve_trans): actually
	return a value.

	* plug-ins/pygimp/pygimp-drawable.c: create new lock_alpha attribute,
	and deprecate old preserve_trans attribute.
